// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.not.toSatisfyAll > fails when any value satisfies predicate 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toSatisfyAny([22m[32mexpected[39m[2m)[22m

Expected array to not satisfy predicate for any value:
  [32m[Function isOdd][39m
Received:
  [31mArray [
  2,
  3,
  6,
  8,
][39m"
`;

exports[`.toSatisfyAny > fails when no value satisfies the predicate 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toSatisfyAny([22m[32mexpected[39m[2m)[22m

Expected array to satisfy predicate for any values:
  [32m[Function isOdd][39m
Received:
  [31mArray [
  2,
  4,
  6,
  8,
][39m"
`;
